fixed issue with add expense size on smaller devices with no expense.

--- a/src/App.css
+++ b/src/App.css
@@ -10,8 +10,12 @@
   /* padding: 1%; */
 }
 
-.smallForm {
-  width: 60%;
+.smallerDeviceForm {
+  width: 100%;
+  margin: auto;
+}
+.biggerDeviceForm {
+  width: 50%;
   margin: auto;
 }
 
